--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,9 @@
 html {
-	height: 100%
-	width: 100%;
 	font-size: 16px;
 }
 
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	height: 100%;
 	font-size: 1em;
 	display: flex;
     justify-content: center;
@@ -20,7 +17,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    font-size: 1em;
 }
 
 h1,
@@ -53,51 +49,42 @@ p {
 
 /*** HEADER and NAV **/
 header {
-	height: auto;
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-flow: column wrap;
-}
-
-header h1 {
-	margin: 0;
-	padding: .75em 0;
+	border-bottom: 3px solid #77a466;
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
+	text-align: center;
+}
+
+header h1 {
+	font-size: 1.875em;
+	margin: 0;
+	padding: 38px 20px 20px 20px; 
+	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
 header h1 span {
 	color: #77a466;
-	padding-right: .3em;
 }
 
 header nav {
-	padding: 1em 0;
+	padding: 20px 0;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 header nav ul {
 	margin: 0;
 	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-flow: column wrap;
 }
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 1em;
-	padding: 1em 0 1em 1.25em;
-	list-style-type: none;
+	font-size: .875em;
+	padding: 10px 0;
+	list-style: none;
 }
 
 header nav ul li a{
@@ -108,17 +95,13 @@ header nav ul li a{
 /** TOP SECTION **/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	flex-flow: column wrap;
+	align-items: center;
+	flex-flow: row wrap;
 
 }
 
-.main-image {
-	height: auto;
-
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
@@ -132,11 +115,12 @@ header nav ul li a{
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
+	font-size: 1.125em;
 }
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.5625;
 }
 
 /** Bottom Section **/
@@ -144,28 +128,12 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 100%;
-	height: auto;
 	border-top: 1px solid #eee;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-flow: column wrap;
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-
-.section-two h4,
-.section-three h4 {
-	padding: .5em .5em;
 }
 
 .menu {
 	list-style: none;
 	padding: 0;
-	margin: 0 0 1em 0;
 }
 .menu li {
 	padding: .625em 0;
@@ -175,85 +143,79 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5;
 }
 
 /*FOOTER */
 footer {
-	height: 50px;
 	width: 100%;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 14px;
+	font-size: .875em;
 }
 
 /** Media Queries **/
 /** Tablet sizes **/
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
 
-.bottom-section {
-	flex-flow: row nowrap;
-}
+	.section-one,
+	.section-two,
+	.section-three {
+		flex-basis: 30%;
+		border-top: none;
+	}
 
-.section-one,
-.section-two,
-.section-three {
-	width: 33.33%;
-	justify-content: flex-start;
-}
 
-.section-one h4,
-.section-two h4,
-.section-three h4 {
-	margin-left: .5em;
-}
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-	} /* END TABLET */
+} /* END TABLET */
 
 /* Desktop */
 
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
 	header {
-		flex-flow: row nowrap;
-		width: 100%;
+		justify-content: space-between;
 	}
-
-	header nav, header h1 {
-		width: 50%;
-	}
-
+	
 	header h1 {
-		border: none;
-		justify-content: flex-start;
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
 	}
+
 
 	header nav {
-		justify-content: flex-end;
+		width: 40%;
 	}
 
 	header nav ul {
-		flex-flow: row nowrap;
+		display: flex;
+		justify-content: space-between;
 	}
-
 
 }
